2011-02-25  Alexander Solovets <asolovets@gmail.com>

	* src/algebra/texmacs.spad.pamphlet: New file.
	src/algebra/boo-dom1.input,
	src/algebra/exposed.lsp.pamphlet,
	file src/algebra/Makefile.in: Adjust.
	src/interp/setvart.boot, src/interp/int-top.boot,
	src/interp/setvars.boot, src/interp/i-output.boot:
	Call routines for Texmacs output.

2011-02-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/msgdb.boot,
	src/interp/debug.lisp, src/interp/c-util.boot,
	src/interp/macros.lisp: Clean up character output.

2011-02-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Alexander Solovets <asolovets@gmail.com>

	* src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp,
	src/interp/int-top.boot, src/sman/sman.c: Support '-eval'
	command line argument.

2011-01-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/bezout.spad.pamphlet,
	src/algebra/fortran.spad.pamphlet,
	src/algebra/poly.spad.pamphlet,
	src/algebra/ffnb.spad.pamphlet,
	src/interp/int-top.boot, src/interp/s-parser.boot,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-01-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/msgdb.boot, src/interp/nruncomp.boot,
	src/interp/debug.lisp, src/interp/functor.boot,
	src/interp/i-output.boot, src/interp/c-util.boot,
	src/interp/setq.lisp, src/interp/macros.lisp:
	Misc cleanups.

2011-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/mantepse.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet: Guessing of
	algebraic dependencies.

2011-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot:knownInfo1(): Also consider
	source when comparing signatures.

2011-01-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-funsel.boot: Avoid unwanted numeric
	evaluation.

2011-01-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/naalgc.spad.pamphlet,
	src/algebra/odealg.spad.pamphlet,