@@ -1,3 +1,7 @@
+2011-02-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/debug.lisp: Use standard output.
+
 2011-02-25  Alexander Solovets <asolovets@gmail.com>
 
 	* src/algebra/texmacs.spad.pamphlet: New file.
